--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/devnzt"]
 	path = themes/devnzt
-	url = https://github.com/Aziangelo/AziFy-Shaders.git
+	url = https://github.com/devendrn/devnzt.git
