--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,9 @@
-base_url = "https://devendrn.github.io/newb-shader/"
+base_url = ""
 compile_sass = true
 build_search_index = false
 
-title = "newb-shader"
-description = "Newb Shader is an enhanced vanilla shader for Minecraft Bedrock Edition."
+title = "AziFy-Shaders"
+description = "AziFy Shaders has many varieties but all of them focused on making Minecraft Better!"
 author = "devendrn"
 
 theme = "devnzt"
@@ -13,11 +13,11 @@ highlight_code = true
 
 [extra]
 error404_title = "Error 404"
-error404_description = "Can't find the page you were looking for..."
+error404_description = "Bro Has a Low Internet... 💀"
 
 header_links = [
     { name = "Download", url = "download" },
     { name = "Help", url = "help" },
 ]
 
-footer_content = "Copyright &copy; devendrn &ensp;|&ensp; This site is not associated with Mojang or Microsoft."
+footer_content = "Copyright &copy; Azi Angelo &ensp;|&ensp; This site is not associated with Mojang or Microsoft."
