--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://github.com/Aziangelo/AziFy-Shaders"
+base_url = "https://devendrn.github.io/newb-shader/"
 compile_sass = true
 build_search_index = false
 
